syntax = "proto3";
package greeter;

service Greeting {
    rpc GreetUser (GreetRequest) returns (GreetResponse);
}


message GreetRequest {
    string name = 1;
}

message GreetResponse {
    string result = 1;
}